Fine tuning Jupyter Notebook

--- a/shanaconnor_eda.ipynb
+++ b/shanaconnor_eda.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Flower petal EDA with Seaborn and Matplotlib\n",
-    "Shana Connor\n",
-    "February 2024   \n",
+    "Flower petal EDA with Seaborn and MatplotlibF <br>\n",
+    "Shana Connor <br>\n",
+    "February 2024 <br>   \n",
     "Exploratory Data Analysis of Iris Dataset"
    ]
   },
