--- a/shanaconnor_eda.ipynb
+++ b/shanaconnor_eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Flower Petal EDA with Seaborn and Matplotlib <br>\n",
+    "Iris Flower Species EDA with Seaborn and Matplotlib <br>\n",
     "Shana Connor <br>\n",
     "February 2024 <br>   \n",
     "Exploratory Data Analysis of Iris Dataset"
