--- a/shanaconnor_eda.ipynb
+++ b/shanaconnor_eda.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Describe chart using variables.  Intrepreting the data, finding averages \n",
+    "Describe chart using variables.  Intrepreting the data and finding averages. \n",
     "\n"
    ]
   },
