--- a/shanaconnor_eda.ipynb
+++ b/shanaconnor_eda.ipynb
@@ -341,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Through plotting graphs we are able to visualize the relationship between various features and the Iris flower species. The graphs show the relationship between the petal length and width, and the sepal length and width. The species are clearly separated by the color of the flowers.  Seaborn and Matplotlib are powerful tools for data visualization.\n",
+    "Through plotting graphs we are able to visualize the relationship between various features of the Iris flower species. The graphs show the relationship between the petal length and width, and the sepal length and width. The species are clearly separated by the color of the flowers.  Seaborn and Matplotlib are powerful tools for data visualization.\n",
     "We can see specifically that the species setosa has the largest sepal length and petal length without having to read through the entire dataset.\n",
     "It is evident that the species Virginica has the largest sepal width in the Iris species."
    ]
